--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,5 @@
 version: '3.8'
 
-x-common-variables: &common-variables
-  POSTGRES_USER: ${DB_USER}
-  POSTGRES_PASSWORD: ${DB_PASSWORD}
-
 services:
   dbpostgres:
     image: postgres
@@ -11,24 +7,14 @@ services:
       - "5433:5432"
     volumes:
       - "./setup.sql:/docker-entrypoint-initdb.d/setup.sql"
+      - "./migration.sql:/docker-entrypoint-initdb.d/migration.sql"
     environment:
-      <<: *common-variables
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_HOST: localhost
 
-  caddy:
-    depends_on:
-      - api
-      - client
-    restart: always
+  backend:
     build:
-      dockerfile: Dockerfile
-      context: ./caddy
-    ports:
-      - "3050:80"
-
-  api:
-    build:
-      dockerfile: Dockerfile
       context: "./backend"
     depends_on:
       - dbpostgres
