--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 x-common-variables: &common-variables
   POSTGRES_USER: ${DB_USER}
@@ -15,6 +15,8 @@ services:
     environment:
       <<: *common-variables
       POSTGRES_HOST: localhost
+    networks:
+      - db_net
 
   caddy:
     depends_on:
@@ -26,6 +28,9 @@ services:
       context: ./caddy
     ports:
       - "3050:80"
+    networks:
+      - web_net
+      - api_net
 
   api:
     build:
@@ -44,6 +49,9 @@ services:
       PGHOST: dbpostgres
       PORT: 8080
     container_name: backend
+    networks:
+      - api_net
+      - db_net
 
   client:
     stdin_open: true
@@ -56,6 +64,13 @@ services:
       - /app/node_modules
       - ./client:/app
     container_name: client
+    networks:
+      - web_net
 
 volumes:
   dbdata:
+
+networks:
+  db_net:
+  web_net:
+  api_net:
