--- a/startup/playbook.yml
+++ b/startup/playbook.yml
@@ -5,4 +5,6 @@
   - name: Backup database
     community.docker.docker_container_exec:
       container: dbpostgres
-      command: pg_dump -U ${DB_USER} -d ${DB_USER} -f /var/backups/db_backup.sql
+      command: bash -c "pg_dump -U ${DB_USER} -d ${DB_NAME} > /var/backups/db_backup_$(date +%Y%m%d).sql"
+      env:
+        PGPASSWORD: ${DB_PASSWORD}
