--- a/startup/Dockerfile
+++ b/startup/Dockerfile
@@ -1,7 +1,13 @@
-FROM ubuntu:23.04
+FROM ubuntu
 
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ="Europe/Vilnius"
+
+RUN apt update && apt install -y python3 python3-pip docker.io software-properties-common
+RUN add-apt-repository --yes --update ppa:ansible/ansible
+RUN apt install -y ansible
+
+RUN pip3 install docker
 
 COPY playbook.yml /opt/playbook.yml
 
