--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ x-common-variables: &common-variables
 services:
   dbpostgres:
     image: postgres
+    container_name: dbpostgres  
     ports:
       - "5433:5432"
     volumes:
@@ -66,6 +67,8 @@ services:
     container_name: client
     networks:
       - web_net
+
+  
 
   startup:
     container_name: startup
